welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:2: error: not found: value sleep
	sleep(1000);
        ^