welcome.lessons.welcome.environment.Environment.scala.code
while(true) {
	sleep(1000);
	System.out.println("Coucou");
}
